Fixed distorted UI for forms

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -12,13 +12,13 @@ body {
     margin-left:-250px;
 }
 
-button {
-    padding:1.2em;
-    width:100%;
-    cursor:pointer;
-    margin-bottom:15px;
-    font-size:1.3em;
-}
+// button {
+//     padding:1.2em;
+//     width:100%;
+//     cursor:pointer;
+//     margin-bottom:15px;
+//     font-size:1.3em;
+// }
 
 .basic-btn {
     background: #3B8598;
